force-app/main/default/objects/Boarding_Pass_2__c/Boarding_Pass_2__c.object-meta.xml
<CustomObject>
    <label>Boarding Pass 2</label>
    <nameField>
        <label>Boarding Pass ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boarding Passes 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>