force-app/main/default/objects/Boarding_Pass_2__c/fields/Baggage__c.field-meta.xml
<CustomField>
    <fullName>Baggage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baggage</label>
    <type>Checkbox</type>
</CustomField>