force-app/main/default/objects/Boarding_Pass_2__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <formula>Flight_ID__r.Departure_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure date</label>
    <type>Time</type>
</CustomField>