force-app/main/default/objects/Boarding_Pass_2__c/fields/Flight_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_ID__c</fullName>
    <label>Flight ID</label>
    <referenceTo>Flight_2__c</referenceTo>
    <relationshipLabel>Boarding Passes 2</relationshipLabel>
    <relationshipName>Boarding_Passes_2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>