force-app/main/default/objects/Boarding_Pass_2__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <label>Gate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>