force-app/main/default/objects/Boarding_Pass_2__c/fields/Has_Boarded__c.field-meta.xml
<CustomField>
    <fullName>Has_Boarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Boarded</label>
    <type>Checkbox</type>
</CustomField>