force-app/main/default/objects/Boarding_Pass_2__c/fields/Has_Checked_In__c.field-meta.xml
<CustomField>
    <fullName>Has_Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Checked In</label>
    <type>Checkbox</type>
</CustomField>