force-app/main/default/objects/Boarding_Pass_2__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meal</label>
    <type>Checkbox</type>
</CustomField>