force-app/main/default/objects/Boarding_Pass_2__c/fields/Passenger_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Contact_Number__c</fullName>
    <formula>Passenger_ID__r.Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passenger Contact Number</label>
    <type>Text</type>
</CustomField>