force-app/main/default/objects/Boarding_Pass_2__c/fields/Passenger_ID__c.field-meta.xml
<CustomField>
    <fullName>Passenger_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger ID</label>
    <referenceTo>Passenger_2__c</referenceTo>
    <relationshipLabel>Boarding Passes 2</relationshipLabel>
    <relationshipName>Boarding_Passes_2</relationshipName>
    <type>Lookup</type>
</CustomField>