force-app/main/default/objects/Boarding_Pass_2__c/fields/Ticket_Fare__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Fare__c</fullName>
    <formula>Ticket_ID__r.Fare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>