force-app/main/default/objects/Boarding_Pass_2__c/fields/Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket ID</label>
    <referenceTo>Ticket_2__c</referenceTo>
    <relationshipLabel>Boarding Passes 2</relationshipLabel>
    <relationshipName>Boarding_Passes_2</relationshipName>
    <type>Lookup</type>
</CustomField>