force-app/main/default/objects/Boarding_Pass_2__c/validationRules/departure_time_is_less_than_hour.validationRule-meta.xml
<ValidationRule>
    <fullName>departure_time_is_less_than_hour</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TIMENOW()  -  TIMEVALUE(
 Flight_ID__r.Departure_Time__c )  &lt; 3600000,Has_Boarded__c  ==False,false)</errorConditionFormula>
    <errorMessage>Departure time is less than an hour</errorMessage>
</ValidationRule>