force-app/main/default/objects/Boarding_Pass_2__c/validationRules/Meal_when_food_is_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Meal_when_food_is_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>Meal__c ==true &amp;&amp;  ISBLANK( Ticket_ID__r.Food_Preferences__c )</errorConditionFormula>
    <errorMessage>Passenger has food preferences, please enter it.</errorMessage>
</ValidationRule>